2008-02-18  Albert Chu <chu11@llnl.gov>

	Merge contents from sensors_config_branch.

        * common/doc/manpage-common-outofband-username-operator.man,
        common/doc/manpage-common-privilege-level-operator.man: New files.

	* common/src/tool-cmdline-common.h,
	common/src/tool-cmdline-common.c: Support operator privilege
	defaults.

        * bmc-config/src/, pef-config/src/: Adjust architecture for common
        config code.

	* libfreeipmi/include/freeipmi/cmds/ipmi-sensor-cmds.h,
	libfreeipmi/src/cmds/ipmi-sensor-cmds.c
	(fill_cmd_set_sensor_thresholds): New function.

	* libfreeipmi/include/freeipmi/api/ipmi-sensor-cmds-api.h,
	libfreeipmi/src/api/ipmi-sensor-cmds-api.c
	(ipmi_cmd_set_sensor_thresholds): New function.

	* common/src/tool-sdr-cache-common.c: Remove pstate asserts.  Support
	NULL pstate input to all functions.

	* common/src/config-common.h: Create macro for max section name length.

	* bmc-config/, pef-config/: use new macro for max section name
	length.

	* libfreeipmi/include/freeipmi/record-format/ipmi-sdr-record-format.h,
	libfreeipmi/src/record-format/ipmi-sdr-record-format.c: Add two
	new templates,
	tmpl_sdr_full_sensor_record_non_threshold_based_sensors and
	tmpl_sdr_full_sensor_record_threshold_based_sensors.

	* libfreeipmi/src/debug/ipmi-debug-sdr.c (ipmi_dump_sdr_record):
	Support more detailed templates.

	* libfreeipmi/include/fiid/fiid.h, libfreeipmi/src/fiid/fiid.c
	(fiid_obj_copy): New function.

	* common/src/tool-sdr-cache-common.h,
	common/src/tool-sdr-cache-common.c
	(sdr_cache_get_threshold_settable): New function.

	* libfreeipmi/include/freeipmi/util/ipmi-sensor-util.h,
	libfreeipmi/src/util/ipmi-sensor-util.c
	(ipmi_sensor_decode_raw_value): New function.

	* common/src/config-common.h, common/src/config-commit.c: Support
	new CONFIG_READABLE_ONLY flag.  New CONFIG_VALIDATE_OUT_OF_RANGE
	validation return value.

	* common/src/config-section.h, common/src/config-section.c